# qt6-cmd-app

./: .gitignore  CMakeLists.txt  conanfile.py  main.cpp
src/: CMakeLists.txt
src/Application/: Application.cpp  Application.h
